--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="app.css">
     <title>Portafolio Trabajos de Desarrollo</title>
 </head>
 <body>
@@ -13,18 +14,20 @@
             <div class="col-md-4" ><!-- COLUMNA -->
                 <div class="card">
                     <img src="https://cdn.pixabay.com/photo/2023/12/09/15/01/hd-wallpapers-8439523_1280.jpg" alt="">
-                    <div class="card-body">
+                    <div class="card-body card-buy">
                         <h2>Lorem ipsum dolor sit amet.</h2>
                        <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam culpa doloribus soluta consectetur ratione quo tempore consequatur, neque quas necessitatibus.</P> 
+                       <button class="btn btn-primary">buy</button>
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="card">
                     <img src="https://cdn.pixabay.com/photo/2023/12/09/15/01/hd-wallpapers-8439523_1280.jpg" alt="">
-                    <div class="card-body">
+                    <div class="card-body card-buy">
                         <h2>Lorem ipsum dolor sit amet.</h2>
                        <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam culpa doloribus soluta consectetur ratione quo tempore consequatur, neque quas necessitatibus.</P> 
+                       <button class="btn btn-primary">buy</button>
                     </div>
                 </div>
             </div>
@@ -32,9 +35,10 @@
             <div class="col-md-4">
                 <div class="card">
                     <img src="https://cdn.pixabay.com/photo/2023/12/09/15/01/hd-wallpapers-8439523_1280.jpg" alt="">
-                    <div class="card-body">
+                    <div class="card-body card-buy">
                         <h2>Lorem ipsum dolor sit amet.</h2>
                        <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam culpa doloribus soluta consectetur ratione quo tempore consequatur, neque quas necessitatibus.</P> 
+                       <button class="btn btn-primary">buy</button>
                     </div>
                 </div>
             </div>
